<package>
  <name>fanuc_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for Fanuc manipulators within ROS-Industrial.</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/fanuc_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>fanuc_lrmate200ic_support</run_depend>
  <run_depend>fanuc_lrmate200ic_moveit_config</run_depend>
  <run_depend>fanuc_lrmate200ic5h_moveit_config</run_depend>
  <run_depend>fanuc_m10ia_moveit_config</run_depend>
  <run_depend>fanuc_m10ia_moveit_plugins</run_depend>
  <run_depend>fanuc_m16ib20_moveit_config</run_depend>
  <run_depend>fanuc_m20ia_moveit_config</run_depend>
  <run_depend>fanuc_m20ia_moveit_plugins</run_depend>
  <run_depend>fanuc_m20ia_support</run_depend>
  <run_depend>fanuc_m20ia10l_moveit_config</run_depend>
  <run_depend>fanuc_m430ia_moveit_plugins</run_depend>
  <run_depend>fanuc_m430ia2f_moveit_config</run_depend>
  <run_depend>fanuc_m430ia2p_moveit_config</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
