<?xml version="1.0"?>
<package format="2">
  <name>fanuc_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for Fanuc manipulators within ROS-Industrial.</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>fanuc_lrmate200ib_moveit_config</exec_depend>
  <exec_depend>fanuc_lrmate200ib_moveit_plugins</exec_depend>
  <exec_depend>fanuc_lrmate200ib_support</exec_depend>
  <exec_depend>fanuc_lrmate200ib3l_moveit_config</exec_depend>
  <exec_depend>fanuc_lrmate200id_moveit_config</exec_depend>
  <exec_depend>fanuc_lrmate200id_moveit_plugins</exec_depend>
  <exec_depend>fanuc_lrmate200id_support</exec_depend>
  <exec_depend>fanuc_m6ib_moveit_config</exec_depend>
  <exec_depend>fanuc_m6ib_moveit_plugins</exec_depend>
  <exec_depend>fanuc_m6ib_support</exec_depend>
  <exec_depend>fanuc_m710ic_support</exec_depend>
  <exec_depend>fanuc_m900ia_support</exec_depend>
  <exec_depend>fanuc_r1000ia_moveit_plugins</exec_depend>
  <exec_depend>fanuc_r1000ia_support</exec_depend>
  <exec_depend>fanuc_r1000ia80f_moveit_config</exec_depend>

  <export>
    <metapackage/>
    <rosindex>
      <tags>
        <tag>metapackage</tag>
        <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>experimental</tag>
      </tags>
    </rosindex>
  </export>
</package>
