<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fanuc_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for Fanuc manipulators within ROS-Industrial.</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>fanuc_crx10ia_support</exec_depend>
  <exec_depend>fanuc_r2000ib_support</exec_depend>
  <exec_depend>fanuc_r2000ic_support</exec_depend>

  <export>
    <architecture_independent/>
    <metapackage/>
    <rosindex>
      <tags>
        <tag>experimental</tag>
        <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>metapackage</tag>
        <tag>ros-industrial</tag>
      </tags>
    </rosindex>
    <ros_industrial>
      <support_level value="community" />
    </ros_industrial>
  </export>
</package>
