<?xml version="1.0"?>
<package format="2">
  <name>fanuc_lrmate200id_gazebo</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial Gazebo support for the Fanuc LR Mate 200iD (and variants).
    </p>
    <p>
      This package contains configuration data and launch files for Gazebo
      for Fanuc LR Mate 200iD manipulators.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc_lrmate200id_gazebo</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>fanuc_lrmate200id_support</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>gazebo</tag>
        <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>lrmate200id</tag>
        <tag>experimental</tag>
      </tags>
    </rosindex>
  </export>
</package>
